<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".features.store.ui.ProductClickedFragment"
    android:background="#B3707070"
    android:clickable="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/product_clicked_cl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@drawable/top_corner_rounded_white"
        android:padding="30dp"
        android:visibility="visible">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />


        <TextView
            android:id="@+id/payment_methods_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/payment_methods"
            android:textSize="16sp"
            android:textColor="#090909"
            android:textStyle="bold"
            android:visibility="gone"/>

        <ImageButton
            android:id="@+id/inquire_btn"
            android:layout_width="120dp"
            android:layout_height="70dp"
            app:layout_constraintTop_toBottomOf="@+id/payment_methods_tv"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="@id/guideline_1"
            android:layout_marginEnd="6dp"
            android:background="@drawable/bg"
            android:src="@drawable/inquire"
            android:layout_marginTop="6dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/inquire_btn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="@id/guideline_1"
            android:text="@string/inquire"
            android:textSize="16sp"
            android:textColor="#090909"/>


        <ImageButton
            android:id="@+id/addToCart_btn"
            android:layout_width="120dp"
            android:layout_height="70dp"
            app:layout_constraintTop_toBottomOf="@+id/payment_methods_tv"
            app:layout_constraintStart_toStartOf="@id/guideline_1"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="6dp"
            android:background="@drawable/bg"
            android:src="@drawable/shopping_cart_2"
            android:layout_marginTop="6dp"/>

        <TextView
            android:id="@+id/cash_payment_lbl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/addToCart_btn"
            app:layout_constraintStart_toStartOf="@id/guideline_1"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/add_to_cart"
            android:textSize="16sp"
            android:textColor="#090909"/>

        <Button
            android:id="@+id/go_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cash_payment_lbl"
            android:layout_marginTop="6dp"
            android:background="@drawable/rounded_button_bg"
            android:foreground="?android:attr/selectableItemBackground"
            android:text="@string/go"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:textStyle="bold"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/product_details_cl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@drawable/top_corner_rounded_white"
        android:padding="30dp"
        android:visibility="gone">

        <TextView
            android:id="@+id/product_name_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/product"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/product_name_value_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/product_name_tv"
            app:layout_constraintTop_toTopOf="@id/product_name_tv"
            app:layout_constraintBottom_toBottomOf="@+id/product_name_tv"
            android:lines="1"
            android:maxLines="1"
            android:layout_marginStart="8dp"
            android:textColor="@android:color/black"
            android:textSize="14sp"
            android:textStyle="normal"
            android:gravity="end|center_vertical"/>

        <TextView
            android:id="@+id/quantity_name_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/product_name_tv"
            android:layout_marginTop="12dp"
            android:text="@string/quantity"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/quantity_name_value_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/quantity_name_tv"
            app:layout_constraintTop_toTopOf="@id/quantity_name_tv"
            app:layout_constraintBottom_toBottomOf="@+id/quantity_name_tv"
            android:lines="1"
            android:maxLines="1"
            android:layout_marginStart="8dp"
            android:textColor="@android:color/black"
            android:textSize="14sp"
            android:textStyle="normal"
            android:gravity="end|center_vertical"/>

        <TextView
            android:id="@+id/price_name_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/quantity_name_tv"
            android:layout_marginTop="12dp"
            android:text="@string/price"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/price_name_value_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/price_name_tv"
            app:layout_constraintTop_toTopOf="@id/price_name_tv"
            app:layout_constraintBottom_toBottomOf="@+id/price_name_tv"
            android:lines="1"
            android:maxLines="1"
            android:layout_marginStart="8dp"
            android:textColor="@android:color/black"
            android:textSize="14sp"
            android:textStyle="normal"
            android:gravity="end|center_vertical"/>

        <Button
            android:id="@+id/success_one_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/price_name_value_tv"
            android:layout_marginTop="18dp"
            android:background="@drawable/rounded_button_bg"
            android:foreground="?android:attr/selectableItemBackground"
            android:text="@string/done"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:textStyle="bold"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/success_result_cl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@drawable/top_corner_rounded_white"
        android:padding="30dp"
        android:visibility="gone">

        <ImageView
            android:id="@+id/success_iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:src="@drawable/success_icon"/>

        <TextView
            android:id="@+id/success_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/success_iv"
            android:layout_marginTop="18dp"
            android:text="@string/add_to_cart_successfully"
            android:textColor="@android:color/black"
            android:textSize="14sp"
            android:textStyle="normal"
            android:gravity="center"/>

        <Button
            android:id="@+id/success_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/success_tv"
            android:layout_marginTop="18dp"
            android:background="@drawable/rounded_button_bg"
            android:foreground="?android:attr/selectableItemBackground"
            android:text="@string/done"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:textStyle="bold"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>