<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".features.cart.CartActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/header_cl"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/details_title_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/cart"
            android:textColor="#212121"
            android:textSize="16sp"/>

        <ImageView
            android:id="@+id/back_iv"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/back_arrow"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:padding="6dp"
            android:layout_marginEnd="12dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/mRecycleView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/header_cl"
        app:layout_constraintBottom_toTopOf="@+id/total_products_key_tv"/>

    <TextView
        android:id="@+id/total_products_key_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/total_price_key_tv"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="30dp"
        android:text="@string/total_products"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/total_products_value_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/total_products_key_tv"
        app:layout_constraintTop_toTopOf="@+id/total_products_key_tv"
        app:layout_constraintBottom_toBottomOf="@+id/total_products_key_tv"
        android:layout_marginStart="6dp"
        android:layout_marginEnd="30dp"
        android:textColor="@android:color/black"
        android:textSize="14sp"
        android:textStyle="normal"
        android:gravity="center_vertical|left" />

    <TextView
        android:id="@+id/total_price_key_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/buy_bun_ll"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="30dp"
        android:text="@string/price_key_list"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/total_price_value_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/total_price_key_tv"
        app:layout_constraintTop_toTopOf="@+id/total_price_key_tv"
        app:layout_constraintBottom_toBottomOf="@+id/total_price_key_tv"
        android:layout_marginStart="6dp"
        android:layout_marginEnd="30dp"
        android:textColor="@android:color/black"
        android:textSize="14sp"
        android:textStyle="normal"
        android:gravity="center_vertical|left" />

    <LinearLayout
        android:id="@+id/buy_bun_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@drawable/top_corner_rounded"
        android:orientation="horizontal"
        android:weightSum="2">

        <Button
            android:id="@+id/return_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="12dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/rounded_light_gray_with_b_border_bg"
            android:foreground="?android:attr/selectableItemBackground"
            android:text="@string/return_btn_tv"
            android:drawableEnd="@drawable/return_icon"
            android:gravity="center"
            android:paddingEnd="30dp"
            android:drawablePadding="-30dp"
            android:textSize="14sp"
            android:textColor="#368EF3"/>

        <Button
            android:id="@+id/buy_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/rounded_button_bg"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="12dp"
            android:layout_marginTop="12dp"
            android:text="@string/print_bill"
            android:textSize="16sp"
            android:textStyle="bold"
            android:foreground="?android:attr/selectableItemBackground"
            android:textColor="@android:color/white"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>