<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        android:padding="12dp"
        android:background="@drawable/rounded_light_gray_bg">

        <TextView
            android:id="@+id/bill_number_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:textSize="14sp"
            android:textColor="#1C1C1C"
            android:text="@string/bill_number"
            android:gravity="center_vertical"/>

        <TextView
            android:id="@+id/bill_number_value_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@+id/bill_number_tv"
            app:layout_constraintEnd_toStartOf="@+id/bill_delete_item_iv"
            app:layout_constraintTop_toTopOf="@+id/bill_number_tv"
            app:layout_constraintBottom_toBottomOf="@+id/bill_number_tv"
            android:layout_marginStart="8dp"
            android:textSize="14sp"
            android:textColor="#1C1C1C"
            android:text="@string/bill_number"
            android:lines="1"
            android:maxLines="1"
            android:gravity="center_vertical"/>

        <TextView
            android:id="@+id/bill_quantity_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bill_number_tv"
            android:layout_marginTop="8dp"
            android:textSize="14sp"
            android:textColor="#1C1C1C"
            android:text="@string/quantity_dot"
            android:gravity="center_vertical"/>

        <TextView
            android:id="@+id/bill_quantity_value_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@+id/bill_number_tv"
            app:layout_constraintEnd_toStartOf="@+id/bill_delete_item_iv"
            app:layout_constraintTop_toTopOf="@+id/bill_quantity_tv"
            app:layout_constraintBottom_toBottomOf="@+id/bill_quantity_tv"
            android:layout_marginStart="8dp"
            android:textSize="14sp"
            android:textColor="#1C1C1C"
            android:text="@string/quantity"
            android:lines="1"
            android:maxLines="1"
            android:gravity="center_vertical"/>

        <TextView
            android:id="@+id/bill_price_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bill_quantity_tv"
            android:layout_marginTop="8dp"
            android:textSize="14sp"
            android:textColor="#1C1C1C"
            android:text="@string/price_dot"
            android:gravity="center_vertical"/>

        <TextView
            android:id="@+id/bill_price_value_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@+id/bill_number_tv"
            app:layout_constraintEnd_toStartOf="@+id/bill_delete_item_iv"
            app:layout_constraintTop_toTopOf="@+id/bill_price_tv"
            app:layout_constraintBottom_toBottomOf="@+id/bill_price_tv"
            android:layout_marginStart="8dp"
            android:textSize="14sp"
            android:textColor="#1C1C1C"
            android:text="@string/quantity"
            android:lines="1"
            android:maxLines="1"
            android:gravity="center_vertical"/>

        <ImageView
            android:id="@+id/bill_delete_item_iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/delete"
            android:padding="4dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>