<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".features.store.ScanProductActivity">

    <com.journeyapps.barcodescanner.DecoratedBarcodeView
        android:id="@+id/barcode_scanner_2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintTop_toBottomOf="parent"
        android:animateLayoutChanges="true"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/scan_product_details_cl"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:padding="20dp"
        android:clickable="true"
        android:visibility="visible">

        <ImageView
            android:id="@+id/close_details_iv"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/close"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/product_description_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/cart_quantity_tv"
            android:layout_marginBottom="12dp"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:text="@string/description"/>

        <TextView
            android:id="@+id/cart_quantity_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/want_add_cart_tv"
            android:layout_marginBottom="20dp"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:text="@string/remaining"
            android:gravity="center"
            android:padding="8dp"
            android:background="@drawable/rounded_button_bg"/>

        <TextView
            android:id="@+id/want_add_cart_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/addToCartBlue_btn"
            android:layout_marginBottom="30dp"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:text="@string/do_you_want_add_cart"/>

        <ImageView
            android:id="@+id/addToCartBlue_btn"
            android:layout_width="50dp"
            android:layout_height="50dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:src="@drawable/add_cart_blue"
            android:layout_marginBottom="30dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <include
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/loading_ll"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        layout="@layout/loading_layout"
        android:visibility="gone" />

</androidx.constraintlayout.widget.ConstraintLayout>